--- a/css/main.scss
+++ b/css/main.scss
@@ -19,6 +19,6 @@
 @import "./pages/arts";
 @import "./pages/works";
 @import "./pages/work-temp";
-@import "./pages/classes";
 @import "./pages/class-temp";
 @import "./pages/contact";
+@import "./pages/class";
