--- a/css/layout/_footer.scss
+++ b/css/layout/_footer.scss
@@ -1,7 +1,7 @@
 //RWD  ---OK
 .footer {
   padding: 64px 0px;
-  background-color: #F9F9F9;
+  background-color: #f9f9f9;
 }
 
 .container-footer {
@@ -19,7 +19,13 @@
     letter-spacing: 2px;
   }
 }
-
+.ft-infobox {
+  div {
+    padding: 6px 0px;
+    line-height: 1.5;
+    color: $dark-color;
+  }
+}
 .brandbox {
   display: flex;
   flex-flow: column wrap;
@@ -33,14 +39,42 @@
     line-height: 1;
     letter-spacing: 0px;
     margin-bottom: 20px;
+    position: relative;
+
+    .ft-ball {
+      width: 50px;
+      height: 50px;
+      border-radius: 60px;
+      background-color: #6c4d41;
+      position: absolute;
+      right: -4%;
+      top: 0%;
+      opacity: 0.3;
+      animation: borderAnim-ft 3s ease-in infinite;
+    }
+    @keyframes borderAnim-ft {
+      0%,
+      100% {
+        border-radius: 30% 70% 70% 30% / 30% 30% 70% 70%;
+      }
+
+      25%,
+      75% {
+        border-radius: 64% 36% 72% 28% / 35% 60% 40% 65%;
+      }
+
+      50% {
+        border-radius: 46% 54% 38% 62% / 66% 38% 62% 34%;
+      }
+    }
   }
 }
 
-.follow-box {
+.ft-follow-box {
+  margin: 10px 0px;
   display: flex;
   justify-content: flex-start;
   align-items: center;
-
   .ig {
     margin-left: 40px;
     margin-right: 15px;
@@ -60,7 +94,7 @@
 
   .sitemap {
     display: block;
-    width: 20%;
+    width: 25%;
   }
 
   .info-box {
