--- a/css/main.css
+++ b/css/main.css
@@ -339,10 +339,25 @@ video {
   margin: 0 0 0 5%;
   font-family: "Noto Sans JP";
   font-size: 12px;
-  color: #999;
+  color: #dbdbdb;
 }
 
-@media screen and (max-width: 575.98px) {
+@media (max-width: 767.98px) {
+  .copyright-footer {
+    text-align: center;
+    margin: 20px 20px 0 20px;
+  }
+}
+
+@media (max-width: 575.98px) {
+  .left-fixed {
+    position: fixed;
+    top: auto;
+    right: 10px;
+    bottom: auto;
+    left: auto;
+    padding: 0;
+  }
   .copyright {
     display: block;
     position: absolute;
@@ -432,7 +447,7 @@ video {
 }
 
 .btn-more::before {
-  content: "";
+  content: '';
   width: 12px;
   height: 1px;
   background: #3C363B;
@@ -445,7 +460,7 @@ video {
 }
 
 .btn-more::after {
-  content: "";
+  content: '';
   width: 6px;
   height: 6px;
   border: 1px solid #3C363B;
@@ -928,7 +943,7 @@ video {
 
 .footer {
   padding: 64px 0px;
-  background-color: #F9F9F9;
+  background-color: #f9f9f9;
 }
 
 .container-footer {
@@ -956,6 +971,12 @@ video {
   letter-spacing: 2px;
 }
 
+.ft-infobox div {
+  padding: 6px 0px;
+  line-height: 1.5;
+  color: #3C363B;
+}
+
 .brandbox {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -979,9 +1000,52 @@ video {
   line-height: 1;
   letter-spacing: 0px;
   margin-bottom: 20px;
+  position: relative;
 }
 
-.follow-box {
+.brandbox h4 .ft-ball {
+  width: 50px;
+  height: 50px;
+  border-radius: 60px;
+  background-color: #6c4d41;
+  position: absolute;
+  right: -4%;
+  top: 0%;
+  opacity: 0.3;
+  -webkit-animation: borderAnim-ft 3s ease-in infinite;
+          animation: borderAnim-ft 3s ease-in infinite;
+}
+
+@-webkit-keyframes borderAnim-ft {
+  0%,
+  100% {
+    border-radius: 30% 70% 70% 30% / 30% 30% 70% 70%;
+  }
+  25%,
+  75% {
+    border-radius: 64% 36% 72% 28% / 35% 60% 40% 65%;
+  }
+  50% {
+    border-radius: 46% 54% 38% 62% / 66% 38% 62% 34%;
+  }
+}
+
+@keyframes borderAnim-ft {
+  0%,
+  100% {
+    border-radius: 30% 70% 70% 30% / 30% 30% 70% 70%;
+  }
+  25%,
+  75% {
+    border-radius: 64% 36% 72% 28% / 35% 60% 40% 65%;
+  }
+  50% {
+    border-radius: 46% 54% 38% 62% / 66% 38% 62% 34%;
+  }
+}
+
+.ft-follow-box {
+  margin: 10px 0px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -993,13 +1057,13 @@ video {
           align-items: center;
 }
 
-.follow-box .ig {
+.ft-follow-box .ig {
   margin-left: 40px;
   margin-right: 15px;
   line-height: 1;
 }
 
-.follow-box .fb {
+.ft-follow-box .fb {
   margin-left: 10px;
   line-height: 1;
 }
@@ -1010,7 +1074,7 @@ video {
   }
   .sitemap {
     display: block;
-    width: 20%;
+    width: 25%;
   }
   .info-box {
     display: block;
@@ -1102,12 +1166,13 @@ video {
           justify-content: flex-start;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
-      -ms-flex-flow: row wrap;
-          flex-flow: row wrap;
+      -ms-flex-flow: row nowrap;
+          flex-flow: row nowrap;
   margin: 180px 0;
 }
 
 .about-l {
+  width: 50%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1130,7 +1195,8 @@ video {
 }
 
 .about-r {
-  margin-left: 50px;
+  margin: 0 0 0 50px;
+  width: 40%;
 }
 
 .about-r p {
@@ -1146,13 +1212,16 @@ video {
   -webkit-box-direction: normal;
       -ms-flex-flow: row nowrap;
           flex-flow: row nowrap;
+  width: 100%;
 }
 
-.ab-imgbox img {
+.ab-imgbox .about-img {
   margin-right: 20px;
 }
 
 .works-section {
+  width: 100%;
+  overflow: hidden;
   margin: 180px 0;
 }
 
@@ -1163,7 +1232,6 @@ video {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  overflow: hidden;
 }
 
 .works-section .index-works-card p {
@@ -1244,26 +1312,25 @@ video {
   right: 0px;
 }
 
-.contact-l .text-wrap {
+.text-wrap {
   margin: 100px 0 0 15%;
 }
 
-.contact-l .text-wrap h1 {
+.text-wrap h1 {
   margin-bottom: 20px;
 }
 
-.contact-l .text-wrap p {
+.text-wrap p {
   margin-bottom: 20px;
 }
 
-.contact-l .text-wrap .info-box a {
+.info-box div {
   padding: 6px 0px;
-  display: block;
   line-height: 1.5;
   color: #3C363B;
 }
 
-.contact-l .text-wrap .info-box .follow-box {
+.follow-box {
   margin: 40px 0px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1276,11 +1343,11 @@ video {
           align-items: center;
 }
 
-.contact-l .text-wrap .info-box .follow-box .ig {
+.follow-box .ig {
   margin: 5px 15px 0px 40px;
 }
 
-.contact-l .text-wrap .info-box .follow-box .fb {
+.follow-box .fb {
   margin: 5px 15px 0px 10px;
 }
 
@@ -1291,8 +1358,18 @@ video {
   background-size: cover;
 }
 
+@media (max-width: 996.98px) {
+  .about-r .w-70 {
+    width: 90%;
+  }
+}
+
 @media (max-width: 767.98px) {
   .about-section {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-flow: column wrap;
+            flex-flow: column wrap;
     margin: 60px 0;
   }
   .about-l {
@@ -1301,6 +1378,7 @@ video {
   }
   .about-r {
     width: 90%;
+    margin: 0 auto;
   }
   .about-r .ab-imgbox {
     margin-top: 40px;
@@ -1319,12 +1397,12 @@ video {
   .arts-section {
     margin-bottom: 40px;
   }
-  .arts-section .art-l,
-  .arts-section .art-r {
+  .art-l,
+  .art-r {
     width: 100%;
   }
-  .arts-section .art-l h4,
-  .arts-section .art-r h4 {
+  .art-l h4,
+  .art-r h4 {
     font-size: 24px;
     line-height: 1.75;
   }
@@ -1341,10 +1419,20 @@ video {
         -ms-flex-flow: row wrap;
             flex-flow: row wrap;
   }
-  .index-contact-wrap .contact-l {
+  .info-box {
     width: 100%;
   }
-  .index-contact-wrap .contact-img {
+  .follow-box {
+    margin: 20px 0px;
+  }
+  .contact-l {
+    width: 100%;
+    padding: 0 20px;
+  }
+  .contact-l .text-wrap {
+    margin: 40px 0 0 0;
+  }
+  .contact-img {
     width: 100%;
   }
 }
@@ -1366,10 +1454,14 @@ video {
   .w-70 {
     width: 90%;
   }
-  .ab-imgbox {
+  .about-r {
+    width: 100%;
+    margin: 0;
+  }
+  .about-r .ab-imgbox {
     width: 100%;
   }
-  .ab-imgbox img {
+  .about-r .ab-imgbox img {
     width: 45%;
   }
   .works-section {
@@ -1527,17 +1619,16 @@ video {
 }
 
 .works-list {
+  margin: 0 -28px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
 }
 
 .works-card {
-  padding: 0px;
+  padding: 0 28px;
   margin-bottom: 64px;
+  width: calc(100% / 3);
 }
 
 .works-card div {
@@ -1770,92 +1861,6 @@ input[type=number]::-webkit-outer-spin-button {
   margin: 0;
 }
 
-.class-hero {
-  margin: 100px auto;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-flow: row nowrap;
-          flex-flow: row nowrap;
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: flex-start;
-  -ms-flex-line-pack: end;
-      align-content: end;
-}
-
-.class-txt {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-flow: column wrap;
-          flex-flow: column wrap;
-  -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: flex-end;
-}
-
-.class-bg {
-  width: 50%;
-  height: 500px;
-  position: absolute;
-  right: 0;
-  background-color: #3C363B;
-  z-index: -1;
-}
-
-.track {
-  width: 100%;
-  height: 1600px;
-}
-
-.camera {
-  width: 100vw;
-  height: 100vh;
-  position: -webkit-sticky;
-  position: sticky;
-  top: 0;
-  overflow: hidden;
-}
-
-.frame {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-flow: row nowrap;
-          flex-flow: row nowrap;
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: flex-start;
-  height: 100%;
-  -webkit-transform: translateX(0);
-          transform: translateX(0);
-}
-
-.item {
-  padding: 35px 50px;
-  margin: 60px;
-  background-color: #E6DFD9;
-  width: 500px;
-  height: 600px;
-  position: relative;
-  white-space: normal;
-}
-
-.item img {
-  width: 290px;
-  -ms-flex-item-align: center;
-      -ms-grid-row-align: center;
-      align-self: center;
-  margin: 20px 50px;
-}
-
 .class-title-wrap {
   margin: 10% auto 400px 8%;
   width: 36%;
@@ -1999,6 +2004,13 @@ input[type=number]::-webkit-outer-spin-button {
   outline: none;
 }
 
+.input:focus + .input-label {
+  -webkit-transform: translateY(-30px);
+          transform: translateY(-30px);
+  opacity: 70%;
+  font-size: 14px;
+}
+
 .transform_y {
   -webkit-transform: translateY(-30px);
           transform: translateY(-30px);
@@ -2006,12 +2018,32 @@ input[type=number]::-webkit-outer-spin-button {
   font-size: 14px;
 }
 
-select {
+.select {
+  margin: -7px 0 0 0;
+  padding: 12px;
+  width: 100%;
+  border: 1px solid #3C363B;
+  border-width: 0 0 1px 0;
   font-family: 'Noto Serif TC', serif;
   font-size: 16px;
+  color: #3C363B;
   background-color: transparent;
   -webkit-appearance: none;
-  border-radius: 0px;
+}
+
+.select::after {
+  content: '';
+  width: 600px;
+  height: 6px;
+  border: 3px solid #3C363B;
+  border-width: 1px 1px 0 0;
+  -webkit-transform: rotate(45deg);
+          transform: rotate(45deg);
+  margin-top: -1px;
+}
+
+.select:focus {
+  outline: none;
 }
 
 .input-label {
@@ -2113,5 +2145,107 @@ select {
   .contact-section .contact-wrap .contact-r .form .submit-btn {
     margin: 10px;
   }
+}
+
+.class-hero {
+  margin: 100px auto 300px auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: row nowrap;
+          flex-flow: row nowrap;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -ms-flex-line-pack: end;
+      align-content: end;
+}
+
+.class-txt {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: column wrap;
+          flex-flow: column wrap;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+}
+
+.class-bg {
+  width: 50%;
+  height: 500px;
+  position: absolute;
+  right: 0;
+  background-color: #3C363B;
+  z-index: -1;
+}
+
+/* ALL */
+.hrWrapper {
+  min-height: 100vh;
+  overflow-x: hidden;
+}
+
+/* TRACK 藍色 */
+.classContainer {
+  padding: 0em 2em;
+  text-align: center;
+}
+
+/* FRAME */
+.classContainerSm {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 220vw;
+  margin-left: 200px;
+  margin-bottom: 150px;
+}
+
+/* ITEM */
+.classItem {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.classCard {
+  padding: 60px 50px;
+  background-color: #E6DFD9;
+  width: 500px;
+  height: 650px;
+  position: relative;
+  white-space: normal;
+}
+
+.classCard p,
+.classCard h5 {
+  text-align: left;
+}
+
+.classCard img {
+  width: 290px;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  margin: 20px 50px;
 }
 /*# sourceMappingURL=main.css.map */
