--- a/css/main.scss
+++ b/css/main.scss
@@ -8,6 +8,7 @@
 @import "./components/button";
 @import "./components/cursor";
 @import "./components/slider";
+@import "./components/img";
 
 //layout
 @import "./layout/navbar";
