--- a/css/base/_reset.scss
+++ b/css/base/_reset.scss
@@ -49,6 +49,10 @@ video {
   color: $primary-color;
 }
 
+input {
+  cursor: none;
+}
+
 // .loading-screen 
 //   position: relative
 //   padding-left: 0
