--- a/css/pages/_arts.scss
+++ b/css/pages/_arts.scss
@@ -20,12 +20,18 @@
   width: 100%;
   display: flex;
   flex-flow: row wrap;
+  justify-content: flex-start;
 }
 
 //arts-card
+// .artItem {
+
+// }
 
 .arts-card {
+  padding: 0 36px;
   display: block;
+  width: calc(100% / 3);
 }
 
 .arts-card-1 {
