--- a/css/pages/_work-temp.scss
+++ b/css/pages/_work-temp.scss
@@ -5,6 +5,7 @@
   justify-content: center;
 }
 
+//work-detail-left
 .work-img-wrap {
   margin: 0 30px 0 0;
   width: 60%;
@@ -23,17 +24,18 @@
   position: absolute;
   font-size: 0;
   line-height: 0;
+  overflow-y: auto;
 }
 
-.work-slider-img {
-  display: inline-block;
-  vertical-align: top;
-  width: 100%;
-  height: 100%;
-  background-size: cover;
-  background-position: 50%;
-  background-repeat: no-repeat;
-}
+// .work-slider-img {
+//   display: inline-block;
+//   vertical-align: top;
+//   width: 100%;
+//   height: 100%;
+//   background-size: cover;
+//   background-position: 50%;
+//   background-repeat: no-repeat;
+// }
 
 .work-slider-page {
   display: flex;
@@ -41,16 +43,7 @@
   justify-content: center;
 }
 
-.work-single-page {
-  margin: -30px 10px 10px 0;
-  width: 60px;
-  height: 60px;
-  border: 2px solid $secondary-color;
-  background-size: cover;
-  background-position: 50%;
-  background-repeat: no-repeat;
-  z-index: 2;
-}
+
 
 .work-info-wrap {
   margin: 0 0 0 30px;
