--- a/css/pages/_class.scss
+++ b/css/pages/_class.scss
@@ -53,7 +53,6 @@
 
 .classCard {
   padding: 60px 50px;
-
   background-color: $secondary-color;
   width: 500px;
   height: 650px;
@@ -69,5 +68,11 @@
     width: 290px;
     align-self: center;
     margin: 20px 50px;
+  }
+}
+
+@media (max-width: 575.98px) {
+  .classItem {
+    padding: 0 50px;
   }
 }
