--- a/css/pages/_index.scss
+++ b/css/pages/_index.scss
@@ -104,6 +104,7 @@
 }
 
 .art-l {
+  width: 50%;
   height: 540px;
   background: url('../assets/arts.jpg') no-repeat 55% 50%;
   background-size: cover;
